--- a/app/views/tenon/pages/_form.html.haml
+++ b/app/views/tenon/pages/_form.html.haml
@@ -6,25 +6,25 @@
     %h4 Edit Options
     %nav
       %ul
-        %li.active= link_to "Page Content", '#details', data: {toggle: 'tab'}
-        %li= link_to "Search Optimization", '#seo', data: {toggle: 'tab'}
+        %li.active= link_to 'Page Content', '#details', data: {toggle: 'tab'}
+        %li= link_to 'Search Optimization', '#seo', data: {toggle: 'tab'}
 
 = autosaving_form_for @page do |f|
   = error_messages_for :page
   .fields.large.tabs
     .tab-pane.active#details
       .form-group
-        = f.text_field :title, :explanation => "This is the title that shows up at the top of your page."
+        = f.text_field :title, explanation: 'This is the title that shows up at the top of your page.'
 
       .form-group= f.tenon_content :content
 
-    .tab-pane#seo= render "tenon/shared/seo_fields", :f => f
+    .tab-pane#seo= render 'tenon/shared/seo_fields', f: f
 
   .fields.small
     %h4.box-label Details
     .box
       .form-group.bordered
-        = f.super_label :parent_id, "Parent Page"
+        = f.super_label :parent_id, 'Parent Page'
         = f.collection_select :parent_id, @potential_parents, :id, :option_title, {:include_blank => "(No Parent)"}
 
       .form-group.inline.bordered
@@ -50,4 +50,4 @@
         = clear_draft_link if params[:version]
         = load_draft_link(@page)
         - if @page.persisted?
-          = link_to "Delete", @page, :data => {:method => :delete, :confirm => "Are you sure you want to delete this?"}, :class => 'delete-link'
+          = link_to "Delete", @page, data: {method: :delete, confirm: 'Are you sure you want to delete this?'}, class: 'delete-link'
