Flexible load more button

--- a/app/assets/stylesheets/tenon/ui/record-lists.css.scss
+++ b/app/assets/stylesheets/tenon/ui/record-lists.css.scss
@@ -148,9 +148,8 @@ ul.record-list {
   display: none;
   margin: $tn-margin auto;
   padding: 5px $tn-padding;
-  width: 200px;
   text-align: center;
   &.open {
-    display: block;
+    display: table;
   }
 }
