--- a/app/views/tenon/item_assets/new.html.haml
+++ b/app/views/tenon/item_assets/new.html.haml
@@ -1,16 +1,17 @@
 .modal-tab-pane.tab-content
-  #upload-asset
-    %h5 From Your Computer
-    #progress
-    = form_for Tenon::Asset.new, format: 'json', builder: Tenon::FormBuilder do |f|
-      = error_messages_for :asset
-      .fields.full
-        .form-group
-          .browse-button-holder.solo
-            .fileupload.btn.btn-comp.browse
-              %span#choose-files Browse
-              %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
-      .spacer
+  - unless params[:hide_upload]
+    #upload-asset
+      %h5 From Your Computer
+      #progress
+      = form_for Tenon::Asset.new, format: 'json', builder: Tenon::FormBuilder do |f|
+        = error_messages_for :asset
+        .fields.full
+          .form-group
+            .browse-button-holder.solo
+              .fileupload.btn.btn-comp.browse
+                %span#choose-files Browse
+                %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
+        .spacer
 
   #pick-asset
     %h5 From the Asset Library
