Add links to images in tenon content

--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -241,6 +241,10 @@
     outline: none;
     background: lighten($tn-primary, 10%);
   }
+
+  .link-form {
+    z-index: $tn-z-medium-editor-controls;
+  }
 }
 
 [contenteditable=true]:empty:not(:focus):before {
