--- a/app/assets/stylesheets/tenon/z-indexes.css.scss
+++ b/app/assets/stylesheets/tenon/z-indexes.css.scss
@@ -15,6 +15,12 @@ $tn-z-content-popped-backdrop: 1020;
 $tn-z-content-popped: 1029;
 $tn-z-tc-sizer: 1029;
 
+// medium
+// MEDIUM DOES NOT ACTUALLY USE THIS VARIABLE
+// THIS IS JUST HERE SO YOU CAN INDEX THINGS RELATIVE TO MEDIUM
+$tn-z-medium-editor-controls: 2000;
+
+
 // modals
 $tn-z-modal-backdrop: 2030;
 $tn-z-asset-cropping: 2040;
