--- a/app/views/tenon/tenon_content/piece_types/display/_image.html.haml
+++ b/app/views/tenon/tenon_content/piece_types/display/_image.html.haml
@@ -1,5 +1,8 @@
 .tn-tc-image
-  = image_tag(piece.image.url(:_medium))
+  - if piece.link_url.blank?
+    = image_tag(piece.image.url(:_medium))
+  - else
+    = link_to image_tag(piece.image.url(:_medium)), piece.link_url, target: '_'
 - if piece.show_caption
   .tn-tc-caption
     = piece.caption
