Stacked rows, no images yet

--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -232,7 +232,8 @@
 
 .image-controls {
   @include transition(none);
-  &.full-width-image, &.three-column-image, &.four-column-image {
+  &.full-width-image, &.three-column-image, &.four-column-image,
+  &.stacked-image-and-text {
     .grow-image, .shrink-image, .swap-sides {
       display: none;
     }
