--- a/app/views/tenon/tenon_content/row_types/display/_three_column_image_and_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_three_column_image_and_text.html.haml
@@ -2,7 +2,7 @@
   -[[0,1], [2,3], [4,5]].each do |positions|
     .four{class: cycle('', '', 'omega')}
       - row.pieces.select { |p| positions.include?(p.position) }.each do |piece|
-        - if piece.object.piece_type == 'Image'
+        - if piece.piece_type == 'Image'
           .tn-tc-piece
             = render "tenon/tenon_content/piece_types/display/image", piece: piece
         - else
