some minor style changes based on design review, bumped to 1.0.19

--- a/app/assets/stylesheets/tenon/colors-custom.css.scss
+++ b/app/assets/stylesheets/tenon/colors-custom.css.scss
@@ -2,7 +2,7 @@
 
 // Change these on a per-site basis
 $tn-client-color: #9c0f17;
-$tn-primary: #ff6a00;
+$tn-primary: #df222A;
 $tn-comp: #978fcc;
 $tn-highlight: $tn-med-grey;
 $tn-nav: #12111a;
