--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -12,14 +12,16 @@
 
     .header-menu.hamburger-toggle
       = link_to '#', class: 'user-menu', data: { icon: 'user' } do
-        .header-icon= fa_icon('fw user')
+        .header-icon
+          .mobile= fa_icon('fw user')
+          .tablet= fa_icon('fw caret-down')
         .header-label= current_user.email
 
       %ul
         %li
           = link_to edit_user_path(current_user) do
             .header-icon= fa_icon('fw gear')
-            .header-label Settings
+            .header-label Edit Info
         %li
           = link_to destroy_user_session_path, method: :delete do
             .header-icon= fa_icon('fw sign-out')
