initial image stretching attempt

--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -191,8 +191,11 @@
     overflow: hidden;
     img {
       display: block;
-      width: 100%;
+      max-width: 100%;
+      margin: 0 auto;
+      width: auto;
     }
+    &.stretch img { width: 100%; }
   }
   textarea.caption, div.tn-tc-caption {
     margin: 0;
