--- a/app/assets/stylesheets/tenon/typography.css.scss
+++ b/app/assets/stylesheets/tenon/typography.css.scss
@@ -27,6 +27,11 @@ a {
 }
 
 // Headers
+h1, h2, h3, h4, h5, h6, p {
+   opacity:0.99;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 h1 {
   font-size: 28px;
