streatch_to_fill: added field to tenon_pieces, renamed things, saved the state

--- a/app/views/tenon/tenon_content/piece_types/display/_image.html.haml
+++ b/app/views/tenon/tenon_content/piece_types/display/_image.html.haml
@@ -1,4 +1,4 @@
-.tn-tc-image
+.tn-tc-image{class: piece.stretch_to_fill? ? 'stretch' : ''}
   - if piece.link_url.blank?
     = image_tag(piece.image.url(:_medium))
   - else
