--- a/app/views/tenon/shared/_main_nav.html.haml
+++ b/app/views/tenon/shared/_main_nav.html.haml
@@ -10,4 +10,5 @@
       = nav_item 'Events', events_path, 'calendar'
       = nav_item 'Galleries', galleries_path, 'th'
       = nav_item 'Contacts', contacts_path, 'envelope'
+      = nav_item 'Redirects', redirects_path, 'exchange'
       = nav_item 'Settings', settings_path, 'gear'
