Add a tenon_addons file for custom CSS

--- a/app/assets/stylesheets/tenon/tenon.css.scss
+++ b/app/assets/stylesheets/tenon/tenon.css.scss
@@ -4,6 +4,7 @@
 *= require medium-editor/medium-editor
 *= require medium-editor/themes/bootstrap
 *= require_self
+*= require tenon_addons
 */
 
 // third party things
