--- a/app/views/tenon/shared/_asset_field.html.haml
+++ b/app/views/tenon/shared/_asset_field.html.haml
@@ -20,3 +20,7 @@
           %small
             or
             = link_to_remove_association "remove", f
+        - else
+          %small
+            or
+            = link_to "remove", '#', class: 'remove-asset'
