--- a/app/assets/stylesheets/tenon/tenon.css.scss
+++ b/app/assets/stylesheets/tenon/tenon.css.scss
@@ -38,6 +38,7 @@
 @import 'tenon/layout/mobile';
 
 // UI Components, choose as needed
+@import 'tenon/ui/i18n';
 @import 'tenon/ui/alerts';
 @import 'tenon/ui/asset-attachment';
 @import 'tenon/ui/asset-cropping';
