--- a/app/views/tenon/tenon_content/_builder.html.haml
+++ b/app/views/tenon/tenon_content/_builder.html.haml
@@ -1,44 +1,10 @@
-%label= field.to_s.titleize
-.explanation
-  Select rows from the library to build this section.
-  You can format your text by highlighting it and selecting options from the pop-up menu.
+- if Tenon.config.languages && f.object.send("#{field}_i18n?")
+  .i18n-holder
+    .i18n-frame
+      .i18n.en.active= render 'tenon/tenon_content/fields', field: field, f: f
+      - Tenon.config.languages.each do |title, lang|
+        .i18n{class: lang}= render 'tenon/tenon_content/fields', field: "#{field}_#{lang}", lang: lang, lang_title: title, f: f
+- else
+  = render 'tenon/tenon_content/fields', field: field, f: f
 
-.tn-tc-main-actions
-  = link_to '#', id: 'tn-tc-pop-out',  class: 'tn-tc-pop-out btn btn-primary' do
-    = fa_icon('eye')
-    %span Edit in Preview Mode
-
-  = link_to '#', id: 'tn-tc-add-content', class: 'tn-tc-add-content btn btn-primary', 'data-modal-target' => '.tenon-library', 'data-modal-clone' => 'true', 'data-modal-title' => 'Add Content', 'data-association-insertion-node' => "##{field}-tenon-content", 'data-association-insertion-method' => 'prepend', 'data-modal-handler' => 'Tenon.features.tenonContent.Library' do
-    = fa_icon('plus-circle')
-    %span Add Content
-
-.tn-tc-wrap
-  .tn-tc-sizes
-    %h2 Preview Mode
-    %p
-      Use preview mode to see how your content will look on different devices.  You can still make edits when you're in preview mode, but the toolbars are hidden to give you a better picture of how your content will be laid out.
-    = tenon_content_sizes
-    = link_to 'Done', '#', class: 'tn-tc-pop-out-close btn btn-comp'
-  .tenon-content{id: "#{field}-tenon-content"}
-    = f.fields_for "#{field}_tenon_content_rows" do |row|
-      - if row.object
-        = render "tenon/tenon_content/row", f: row, row_partial: row.object.decorate.form_partial, field: field, title: row.object.row_type.titleize
-
-.tenon-library-holder
-  .tenon-library
-    %ul
-      - Tenon::TenonContent::RowTypes::LIBRARY_ROW_TYPES.each do |title, row_type|
-        %li= row_link(title, row_type, field, f)
-    .spacer
-
-
-/- Shared Embed Code Modal Body
-.edit-embed-code
-  .modal-body
-    %label{for: 'embed_code'} Paste your embed code here
-    %p.explanation
-      Note: In order to get your embed to work with various screen sizes, you may want to get a code from
-      = link_to 'http://embedresponsively.com/', 'http://embedresponsively.com/', target: '_'
-    = text_area_tag 'embed_code'
-
-  .modal-footer= link_to 'Update', '#', class: 'btn btn-comp update-embed-code'
+= render 'tenon/tenon_content/embed_modal'
