--- a/app/views/tenon/tenon_content/_row.html.haml
+++ b/app/views/tenon/tenon_content/_row.html.haml
@@ -4,7 +4,7 @@
     .actions
       %i.fa.fa-arrows.drag-anchor
 
-      = link_to '#', class: 'tn-tc-open-library above', 'data-modal-target' => '.tenon-library', 'data-modal-title' => "Insert Content", 'data-modal-handler' => 'Tenon.features.tenonContent.Library', 'data-modal-clone' => 'true', 'data-tooltip' => '', title: 'Insert Content' do
+      = link_to '#', class: 'tn-tc-open-library above', 'data-modal-target' => ".#{field} .tenon-library", 'data-modal-title' => "Insert Content", 'data-modal-handler' => 'Tenon.features.tenonContent.Library', 'data-modal-clone' => 'true', 'data-tooltip' => '', title: 'Insert Content' do
         = fa_icon('plus-circle')
 
       = link_to_remove_association(fa_icon('trash-o'), f, {'data-confirm' => 'Are you sure?', 'data-wrapper-class' => 'tn-tc-row'})
@@ -15,5 +15,5 @@
 
   .tn-tc-bottombar
     .actions
-      = link_to '#', class: 'tn-tc-open-library below', 'data-modal-target' => '.tenon-library', 'data-modal-title' => "Insert Content", 'data-modal-handler' => 'Tenon.features.tenonContent.Library', 'data-modal-clone' => 'true', 'data-tooltip' => '', title: 'Insert Content' do
+      = link_to '#', class: 'tn-tc-open-library below', 'data-modal-target' => ".#{field} .tenon-library", 'data-modal-title' => "Insert Content", 'data-modal-handler' => 'Tenon.features.tenonContent.Library', 'data-modal-clone' => 'true', 'data-tooltip' => '', title: 'Insert Content' do
         = fa_icon('plus-circle')
