Better page titles for sign in/forgot password pages

--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -12,5 +12,5 @@
     = f.submit "Send reset instructions", class: 'btn btn-info'
   .row.bordered
     %p{:style => "text-align: right; margin-top: 10px; font-size: 12px;"}
-      = link_to "Sign In", "/login"
+      = link_to "Sign In", new_user_session_path
 
