Convert login form to email type

--- a/app/assets/stylesheets/tenon/ui/login.css.scss
+++ b/app/assets/stylesheets/tenon/ui/login.css.scss
@@ -83,7 +83,7 @@
     }
   }
 
-  input[type=text], input[type=password] {
+  input[type=text], input[type=password], input[type=email] {
     width: 100%;
     border: 0;
 
