--- a/app/assets/stylesheets/tenon/ui/forms.css.scss
+++ b/app/assets/stylesheets/tenon/ui/forms.css.scss
@@ -20,7 +20,7 @@
     }
   }
 
-  input[type=text], input[type=password], textarea, select {
+  input[type=text], input[type=password], input[type=email], textarea, select {
     margin: 3px 0;
     padding-left: 5px;
     width: 100%;
@@ -34,7 +34,7 @@
   font-size: $tn-font-small;
 }
 
-label, input[type=text], input[type=password], textarea, .explanation, h4.box-label {
+label, input[type=text], input[type=password], input[type=email], textarea, .explanation, h4.box-label {
   margin: 2px 0;
 }
 
@@ -51,7 +51,7 @@ label, h4.box-label {
   line-height: 18px;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
   height: 40px;
   font-size: $tn-font-large;
 }
@@ -85,7 +85,7 @@ input[type=text], input[type=password] {
     padding: 10px;
   }
 
-  input[type=text], input[type=password] {
+  input[type=text], input[type=password], input[type=email] {
     padding: 0;
     height: auto;
     color: $tn-dark-grey;
