--- a/app/views/tenon/shared/_asset_field.html.haml
+++ b/app/views/tenon/shared/_asset_field.html.haml
@@ -1,21 +1,24 @@
-%label.asset-label= asset.to_s.titleize
+/ TODO call this partial with local variable named asset_name rather than asset
+- asset_name = asset
+- proxy_attachment = f.object.send(asset_name)
+%label.asset-label= asset_name.to_s.titleize
 .asset-field
-  = f.hidden_field "#{asset}_id", class: 'asset-id-field'
+  = f.hidden_field "#{asset_name}_id", class: 'asset-id-field'
   .thumbnail
-    - if f.object.send(asset)
-      = image_tag url_for(f.object.send(asset).url(:_thumbnail))
+    - if proxy_attachment.try(:asset)
+      = asset_icon(proxy_attachment.asset)
     - else
-      = image_tag default_asset_thumbnail(f.object.send(asset))
+      = image_tag default_asset_thumbnail(proxy_attachment)
   .details
     .asset-info
-      - if f.object.send(asset)
-        = f.object.send(asset).display_name
+      - if proxy_attachment
+        = proxy_attachment.display_name
       - else
         No asset selected.
 
     .browse-button-holder{:class => ('with-remove' if defined?(remove_association) && remove_association)}
       .browse-button
-        = link_to 'Browse', new_item_asset_path, class: 'btn btn-comp browse', data: {'modal-remote' => true, 'modal-title' => "Select #{asset.to_s.titleize}", 'modal-handler' => 'Tenon.features.AssetAttachment'}
+        = link_to 'Browse', new_item_asset_path, class: 'btn btn-comp browse', data: {'modal-remote' => true, 'modal-title' => "Select #{asset_name.to_s.titleize}", 'modal-handler' => 'Tenon.features.AssetAttachment'}
         - if defined?(remove_association) && remove_association
           %small
             or
