fix the i18n language nav

--- a/app/views/tenon/events/_form.html.haml
+++ b/app/views/tenon/events/_form.html.haml
@@ -4,7 +4,7 @@
       %h2 Events
       = link_to "New Event", new_event_path, class: 'btn btn-block btn-primary'
 
-    = i18n_language_nav(:events)
+    = i18n_language_nav(:'tenon/events')
 
 = error_messages_for :event
 
