--- a/app/views/tenon/posts/_form.html.haml
+++ b/app/views/tenon/posts/_form.html.haml
@@ -9,7 +9,7 @@
         %li.active= link_to 'Post Content', '#details', data: {toggle: 'tab'}
         %li= link_to "Search Optimization", '#seo', data: {toggle: 'tab'}
 
-    = i18n_language_nav(:posts)
+    = i18n_language_nav(:'tenon/posts')
 
     = render "tenon/shared/posts_nav"
 
