wording tweak on page form

--- a/app/views/tenon/pages/_form.html.haml
+++ b/app/views/tenon/pages/_form.html.haml
@@ -35,7 +35,7 @@
 
       .form-group.inline.bordered
         = f.check_box :show_contact_form, class: 'tn-checkbox-right'
-        = f.super_label :show_contact_form, "Show in Contact Form?"
+        = f.super_label :show_contact_form, "Show Contact Form?"
 
     %h4.box-label Publish Your Page
     .box
