apply OS X font fix to <i> elements to fix FontAwesome icons

--- a/app/assets/stylesheets/tenon/typography.css.scss
+++ b/app/assets/stylesheets/tenon/typography.css.scss
@@ -27,7 +27,7 @@ a {
 }
 
 // Headers
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, i {
    opacity:0.99;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
