spec fix: check box css changes broke the login form

--- a/app/assets/stylesheets/tenon/ui/login.css.scss
+++ b/app/assets/stylesheets/tenon/ui/login.css.scss
@@ -77,9 +77,15 @@
   .remember {
     display: inline-block;
     vertical-align: middle;
+    width: 50%;
+    position: relative;
 
     label {
       display: inline;
+      &:before {
+        position: relative;
+        top: 3px;
+      }
     }
   }
 
