--- a/app/views/layouts/tenon/application.html.haml
+++ b/app/views/layouts/tenon/application.html.haml
@@ -4,6 +4,8 @@
     = csrf_meta_tag
     %meta{ :content => "text/html; charset=utf-8", "http-equiv" => "Content-Type" }/
     %meta{ :content => 'initial-scale=1,width=device-width,user-scalable=no', :name => 'viewport' }
+    - if Tenon.config.theme_color
+      %meta{ :content => Tenon.config.theme_color, :name => 'theme-color' }
     %title
       = raw @page_title + ": " if @page_title
       = Tenon::MySettings.site_title if Tenon::MySettings.site_title
