some medium editor style updates

--- a/app/assets/stylesheets/tenon/colors-named.css.scss
+++ b/app/assets/stylesheets/tenon/colors-named.css.scss
@@ -17,6 +17,6 @@ $tc-med-grey: $tn-med-grey;
 $tc-dark-grey: $tn-dark-grey;
 
 // Medium Editor
-$medium-editor-toolbar-border: transparentize(#fff, 0.6);
-$medium-editor-toolbar-hover: $medium-editor-toolbar-border;
-$medium-editor-toolbar-active: $medium-editor-toolbar-border;
+// $medium-editor-toolbar-border: transparentize(#fff, 0.6);
+// $medium-editor-toolbar-hover: $medium-editor-toolbar-border;
+// $medium-editor-toolbar-active: $medium-editor-toolbar-border;
