--- a/app/views/tenon/tenon_content/piece_types/form/_image.html.haml
+++ b/app/views/tenon/tenon_content/piece_types/form/_image.html.haml
@@ -4,7 +4,9 @@
 = f.hidden_field :stretch_to_fill
 .image{class: f.object.stretch_to_fill? ? 'stretch' : ''}
   - if f.object.image
-    = image_tag(f.object.image.url(:_medium))
+    =# image_tag(f.object.image.url(:_original))
+    =# raise f.object.inspect
+    = front_end_responsive_image_tag(f.object.image, :twelve)
   - else
     = link_to(new_item_asset_path, class: 'add-image', data: {'modal-remote' => true, 'modal-title' => "Select Image", 'modal-handler' => 'Tenon.features.tenonContent.AssetAttachment'}) do
       %span Add Image
