clean up some unused experiments

--- a/app/views/tenon/tenon_content/piece_types/display/_image.html.haml
+++ b/app/views/tenon/tenon_content/piece_types/display/_image.html.haml
@@ -1,10 +1,11 @@
 .tn-tc-image{class: piece.stretch_to_fill? ? 'stretch' : ''}
   - if piece.image.present?
     - if piece.link_url.blank?
+      =# image_tag(piece.image.url(:_medium))
       = frontend_piece_image_tag(piece)
     - else
       =# link_to image_tag(piece.image.url(:_medium)), piece.link_url, target: '_'
-      = link_to front_end_responsive_image_tag(piece.image, piece.size.to_sym), piece.link_url, target: '_'
+      = link_to frontend_piece_image_tag(piece), piece.link_url, target: '_'
   - else
     = image_tag('tenon/thumb-doc.png')
 - if piece.show_caption
