--- a/app/assets/stylesheets/tenon/ui/medium-editor.css.scss
+++ b/app/assets/stylesheets/tenon/ui/medium-editor.css.scss
@@ -1,3 +1,79 @@
+// Anchor - asset and cancel buttons:
+.medium-editor-cancel, #medium-editor-link-to-asset {
+  &:hover {
+    text-decoration: none;
+    &:before {
+      color: lighten($tn-primary, 40%);
+    }
+  }
+  &:before {
+    font-family: 'FontAwesome';
+    font-size: 20px;
+    font-weight: 400;
+    position: relative;
+    top: 2px;
+    color: white;
+  }
+}
+.medium-editor-cancel:before {
+  content: '\f057';
+}
+#medium-editor-link-to-asset:before {
+  content: '\f1c1';
+}
+
+// Set z-index below tooltips:
+.medium-editor-toolbar {
+  z-index: 1000;
+}
+
+// Open link in new window checkbox styles:
+.medium-editor-toolbar-form-anchor {
+  input {
+    height: 56px;
+    &.medium-editor-toolbar-anchor-target {
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 30px;
+      margin: 0;
+      cursor: pointer;
+      opacity: 0;
+      &:checked + .medium-editor-toolbar-anchor-target-label:before {
+        // content: '\f08e'; // external-light
+        content: '\f14c'; // external-dark
+      }
+    }
+  }
+  .medium-editor-toolbar-anchor-target-wrap {
+    position: relative;
+    top: 2px;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+  }
+  label.medium-editor-toolbar-anchor-target-label {
+    display: inline-block;
+    width: auto;
+    margin: 0 6px;
+    padding: 0;
+    &:before {
+      font-family: 'FontAwesome';
+      font-size: 18px;
+      line-height: 30px;
+      display: block;
+      content: '\f0c8'; // square-dark
+      // content: '\f096'; // square-light
+      color: white;
+    }
+  }
+}
+
 // Color updates:
 .medium-toolbar-arrow-under:after {
   border-color: $tn-primary transparent transparent;
@@ -9,7 +85,6 @@
 
 .medium-editor-toolbar-form-anchor {
   background: $tn-primary;
-
   input {
     background: $tn-primary;
   }
@@ -20,16 +95,13 @@
 }
 
 .medium-editor-toolbar {
-  background-color: $tn-primary;
   border: 1px solid lighten($tn-primary, 10%);
-
+  background-color: $tn-primary;
   li .medium-editor-button-active {
     background-color: darken($tn-primary, 10%);
   }
-
   li button {
     border-right: 1px solid lighten($tn-primary, 10%);
-
     &:hover {
       background-color: lighten($tn-primary, 10%);
     }
@@ -39,28 +111,3 @@
 .medium-editor-placeholder:after {
   color: lighten($tn-primary, 10%);
 }
-
-// Asset and cancel buttons:
-.medium-editor-cancel, #medium-editor-link-to-asset {
-  &:hover {
-    text-decoration: none;
-    &:before {
-      color: lighten($tn-primary, 40%);
-    }
-  }
-  &:before {
-    position: relative;
-    top: 2px;
-    font-family: "FontAwesome";
-    color: white;
-    font-weight: 400;
-    font-size: 20px;
-  }
-}
-.medium-editor-cancel:before {
-  content: "\f057";
-}
-#medium-editor-link-to-asset:before {
-  content: "\f1c1";
-}
-
