added six column image tenon-content type and cleaned up some other content types

--- a/app/views/tenon/tenon_content/row_types/display/_full_width_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_full_width_image.html.haml
@@ -1,4 +1,4 @@
 .full-width-image
-  .tn-tc-piece.twelve
+  .tn-tc-piece.twelve.asset-field
     = render "tenon/tenon_content/piece_types/display/image", piece: row.pieces.first
   .spacer
