--- a/app/views/tenon/tenon_content/row_types/display/_two_column_image_and_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_two_column_image_and_text.html.haml
@@ -3,7 +3,7 @@
     .six{class: cycle('', 'omega')}
       - row.pieces.select { |p| positions.include?(p.position) }.each do |piece|
         - if piece.piece_type == 'Image'
-          .tn-tc-piece
+          .tn-tc-piece.asset-field
             = render "tenon/tenon_content/piece_types/display/image", piece: piece
         - else
           .tn-tc-piece
