added two more header options to medium on tenon

--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -141,7 +141,7 @@
     padding: 5px;
     outline: none;
     background: #fff;
-    h3, h4, p, ul, ol {
+    h1, h2, h3, h4, h5, h6, p, ul, ol {
       margin: 0 0 $tn-margin;
       padding-top: 0;
     }
